01-backend-apis/finance-api/deployment/kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novacrest-finance-service
  labels:
    app: novacrest-finance-api
spec:
  type: ClusterIP
  selector:
    app: novacrest-finance-api
  ports:
  - name: http
    port: 8082
    targetPort: 8082
    protocol: TCP
